<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/avad_root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_height="match_parent">
        <ImageView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/logo_image"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:scaleType="centerInside"
            android:src="@drawable/saas_logo_img"/>
        <TextView
            android:layout_marginLeft="10dp"
            android:id="@+id/logo_text_S"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white_text"
            android:text="@string/s"
            android:textSize="35dp"/>
        <TextView
            android:id="@+id/logo_text_a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white_text"
            android:text="@string/a"
            android:textSize="35dp"/>
        <TextView
            android:id="@+id/logo_text_a2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white_text"
            android:text="@string/a"
            android:textSize="35dp"/>
        <TextView
            android:id="@+id/logo_text_S2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white_text"
            android:text="@string/s"
            android:textSize="35dp"/>
        <TextView
            android:id="@+id/logo_text_P"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white_text"
            android:text="@string/p"
            android:textSize="35dp"/>
        <TextView
            android:id="@+id/logo_text_r"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white_text"
            android:text="@string/r"
            android:textSize="35dp"/>
        <TextView
            android:id="@+id/logo_text_o"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white_text"
            android:text="@string/o"
            android:textSize="35dp"/>
    </LinearLayout>
</RelativeLayout>