<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.buenadigital.saaspro.activities.MainActivity">
        <include
            android:id="@+id/app_bar"
            layout="@layout/app_bar"/>
        <RelativeLayout
            android:layout_below="@id/app_bar"
            android:id="@+id/main_saaspro_layout"
            android:layout_width="match_parent"
            android:background="@color/primary"
            android:layout_height="match_parent">
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:gravity="left|center_vertical"
            android:layout_marginLeft="56dp"
            android:orientation="horizontal"
            android:layout_height="56dp">
            <ImageView
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/logo_image"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:scaleType="centerInside"
                android:src="@drawable/saas_logo_img"/>
            <TextView
                android:layout_marginLeft="10dp"
                android:id="@+id/logo_text_S"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white_text"
                android:text="@string/s"
                android:textSize="25dp"/>
            <TextView
                android:id="@+id/logo_text_a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white_text"
                android:text="@string/a"
                android:textSize="25dp"/>
            <TextView
                android:id="@+id/logo_text_a2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white_text"
                android:text="@string/a"
                android:textSize="25dp"/>
            <TextView
                android:id="@+id/logo_text_S2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white_text"
                android:text="@string/s"
                android:textSize="25dp"/>
            <TextView
                android:id="@+id/logo_text_P"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white_text"
                android:text="@string/p"
                android:textSize="25dp"/>
            <TextView
                android:id="@+id/logo_text_r"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white_text"
                android:text="@string/r"
                android:textSize="25dp"/>
            <TextView
                android:id="@+id/logo_text_o"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white_text"
                android:text="@string/o"
                android:textSize="25dp"/>
        </LinearLayout>

    </RelativeLayout>

    <fragment
        android:id="@+id/navigation_drawer_fragment"
        android:layout_width="280dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:name="com.buenadigital.saaspro.navDrawer.NavigationDrawerFragment"
        app:layout="@layout/fragment_navigation_drawer"
        tools:layout="@layout/fragment_navigation_drawer" />

</android.support.v4.widget.DrawerLayout>
