<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_saaspro_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/primary"
    tools:context="com.buenadigital.saaspro.activities.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_height="match_parent">
        <ImageView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/logo_image"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:scaleType="centerInside"
            android:src="@drawable/saas_logo_img"/>
        <TextView
            android:layout_marginLeft="10dp"
            android:id="@+id/logo_text_S"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white_text"
            android:text="@string/s"
            android:textSize="35dp"/>
        <TextView
            android:id="@+id/logo_text_a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white_text"
            android:text="@string/a"
            android:textSize="35dp"/>
        <TextView
            android:id="@+id/logo_text_a2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white_text"
            android:text="@string/a"
            android:textSize="35dp"/>
        <TextView
            android:id="@+id/logo_text_S2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white_text"
            android:text="@string/s"
            android:textSize="35dp"/>
        <TextView
            android:id="@+id/logo_text_P"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white_text"
            android:text="@string/p"
            android:textSize="35dp"/>
        <TextView
            android:id="@+id/logo_text_r"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white_text"
            android:text="@string/r"
            android:textSize="35dp"/>
        <TextView
            android:id="@+id/logo_text_o"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white_text"
            android:text="@string/o"
            android:textSize="35dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_height="wrap_content">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/login_page_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="26dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:textColor="@color/white_text"
                    android:text="@string/login"/>
                <com.buenadigital.saaspro.customModels.MaterialEditTextMedium
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:hint="@string/account"
                    android:textSize="20dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:singleLine="true"
                    android:layout_marginTop="10dp"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:id="@+id/login_page_account"
                    app:met_floatingLabel="highlight"
                    app:met_baseColor="#FFFFFF"
                    app:met_primaryColor="#FFFFFF"
                    app:met_textColorHint="#FFCCBC"
                    app:met_singleLineEllipsis="true"
                    app:met_underlineColor="#FFFFFF"
                    app:met_errorColor="#FF0000"/>
                <com.buenadigital.saaspro.customModels.MaterialEditTextMedium
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:background="@null"
                    android:hint="Username"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:textSize="20dp"
                    android:singleLine="true"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:id="@+id/login_page_username"
                    app:met_floatingLabel="highlight"
                    app:met_baseColor="#FFFFFF"
                    app:met_primaryColor="#FFFFFF"
                    app:met_textColorHint="#FFCCBC"
                    app:met_singleLineEllipsis="true"
                    app:met_underlineColor="#FFFFFF"
                    app:met_errorColor="#FF0000"/>
                <com.buenadigital.saaspro.customModels.MaterialEditTextMedium
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/login_page_username"
                    android:background="@null"
                    android:hint="Password"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:textSize="20dp"
                    android:singleLine="true"
                    android:imeOptions="actionDone"
                    android:inputType="textEmailAddress"
                    android:id="@+id/login_page_password"
                    app:met_floatingLabel="highlight"
                    app:met_baseColor="#FFFFFF"
                    app:met_primaryColor="#FFFFFF"
                    app:met_textColorHint="#FFCCBC"
                    app:met_singleLineEllipsis="true"
                    app:met_underlineColor="#FFFFFF"
                    app:met_errorColor="#FF0000"/>
                <CheckBox
                    android:id="@+id/login_page_remember_me_checkbox"
                    android:layout_marginTop="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18dp"
                    android:paddingLeft="10dp"
                    android:layout_marginLeft="16dp"
                    android:button="@drawable/checkbox_selector"
                    android:textColorHint="@color/white_text"
                    android:hint="@string/remember_me"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:id="@+id/login_page_button_login"
                    android:layout_marginTop="28dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:textSize="16dp"
                    android:textColor="@color/primary_light"
                    android:background="@drawable/custom_button_brown"/>

            </LinearLayout>
        </ScrollView>

    </LinearLayout>



</RelativeLayout>
